--- a/src/app/main/drivers/drivers.component.html
+++ b/src/app/main/drivers/drivers.component.html
@@ -1,3 +1,6 @@
-<p>
-  drivers works!
-</p>
+<div class="page-layout blank p-24" fusePerfectScrollbar>
+
+    <h2>{{'SAMPLE.HELLO' | translate}}</h2>
+
+</div>
+
