Completed Authentication With Perfect Route Configuration

--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -81,6 +81,10 @@ $typography: mat-typography-config(
 @import "src/app/layout/components/chat-panel/chat-panel.theme";
 @import "src/app/layout/components/toolbar/toolbar.theme";
 @import "src/app/main/login/login.theme";
+@import "src/app/main/register/register.theme";
+@import "src/app/main/forgot-password/forgot-password.theme";
+@import "src/app/main/mail-confirm/mail-confirm.theme";
+
 
 // Define a mixin for easier access
 @mixin components-theme($theme) {
@@ -89,6 +93,9 @@ $typography: mat-typography-config(
     @include chat-panel-theme($theme);
     @include toolbar-theme($theme);
     @include login-theme($theme);
+    @include register-theme($theme);
+    @include forgot-password-theme($theme);
+    @include mail-confirm-theme($theme);
 }
 
 // -----------------------------------------------------------------------------------------------------
