--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,63 +1,89 @@
 <div id="login" fxLayout="column">
-
-    <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
-
-        <div id="login-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
-
+    <div
+        id="login-form-wrapper"
+        fxLayout="column"
+        fxLayoutAlign="center center"
+    >
+        <div
+            id="login-form"
+            [@animate]="{
+                value: '*',
+                params: { duration: '300ms', y: '100px' }
+            }"
+        >
             <div class="logo">
-                <img src="assets/images/logos/fuse.svg">
+                <img src="assets/images/logos/fuse.svg" />
             </div>
 
             <div class="title">LOGIN TO YOUR ACCOUNT</div>
 
             <form name="loginForm" [formGroup]="loginForm" novalidate>
-
                 <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <input matInput formControlName="email">
-                    <mat-icon matSuffix class="secondary-text">mail</mat-icon>
-                    <mat-error *ngIf="loginForm.get('email').hasError('required')">
-                        Email is required
-                    </mat-error>
-                    <mat-error
-                        *ngIf="!loginForm.get('email').hasError('required') &&
-                                loginForm.get('email').hasError('email')">
-                        Please enter a valid email address
-                    </mat-error>
+                    <mat-label>Username </mat-label>
+                    <input matInput formControlName="username" #userName />
+                    <mat-icon matSuffix class="secondary-text"
+                        >username</mat-icon
+                    >
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input matInput type="password" formControlName="password">
-                    <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
+                    <input
+                        matInput
+                        type="password"
+                        #userPassword
+                        formControlName="password"
+                    />
+                    <mat-icon matSuffix class="secondary-text"
+                        >vpn_key</mat-icon
+                    >
                     <mat-error>
                         Password is required
                     </mat-error>
                 </mat-form-field>
 
-                <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column"
-                     fxLayoutAlign="space-between center">
+                <div
+                    class="remember-forgot-password"
+                    fxLayout="row"
+                    fxLayout.xs="column"
+                    fxLayoutAlign="space-between center"
+                >
                     <mat-checkbox class="remember-me" aria-label="Remember Me">
                         Remember Me
                     </mat-checkbox>
 
-                    <a class="forgot-password" [routerLink]="'/pages/auth/forgot-password'">
+                    <a
+                        class="forgot-password"
+                        class="link"
+                        [routerLink]="'/forgot-password'"
+                    >
                         Forgot Password?
                     </a>
                 </div>
 
-                <button mat-raised-button color="accent" class="submit-button" aria-label="LOG IN"
-                        [disabled]="loginForm.invalid">
+                <button
+                    (click)="
+                        authService.SignIn(userName.value, userPassword.value)
+                    "
+                    mat-raised-button
+                    color="accent"
+                    class="submit-button"
+                    aria-label="LOG IN"
+                    [disabled]="loginForm.invalid"
+                >
                     LOGIN
                 </button>
-
             </form>
 
             <div class="separator">
                 <span class="text">OR</span>
             </div>
 
-            <button mat-raised-button class="google">
+            <button
+                (click)="authService.GoogleAuth()"
+                mat-raised-button
+                class="google"
+            >
                 Log in with Google
             </button>
 
@@ -65,13 +91,14 @@
                 Log in with Facebook
             </button>
 
-            <div class="register" fxLayout="column" fxLayoutAlign="center center">
+            <div
+                class="register"
+                fxLayout="column"
+                fxLayoutAlign="center center"
+            >
                 <span class="text">Don't have an account?</span>
-                <a class="link" [routerLink]="'/pages/auth/register'">Create an account</a>
+                <a class="link" [routerLink]="'/register'">Create an account</a>
             </div>
-
         </div>
-
     </div>
-
 </div>
