All Set 1st April

--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -62,9 +62,7 @@
                 </div>
 
                 <button
-                    (click)="
-                        authService.SignIn(userName.value, userPassword.value)
-                    "
+                    (click)="authService.SignIn(userName.value, userPassword.value)"
                     mat-raised-button
                     color="accent"
                     class="submit-button"
