--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -25,12 +25,12 @@
 <div class="navbar-scroll-container" [ngClass]="fuseConfig.layout.navbar.primaryBackground"
      fusePerfectScrollbar [fusePerfectScrollbarOptions]="{suppressScrollX: true}">
 
-    <div class="user" fxLayout="column" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
+    <div *ngIf="authService.userData as user" class="user" fxLayout="column" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
-        <div class="h3 username">Admin</div>
-        <div class="h5 email hint-text mt-8">CarIndia@gmail.com</div>
+        <div class="h3 username">{{user.displayName ? user.displayName : "User"}}</div>
+        <div class="h5 email hint-text mt-8">{{user.email ? user.email : "User"}}</div>
         <div class="avatar-container" [ngClass]="fuseConfig.layout.navbar.primaryBackground">
-            <img class="avatar" src="assets/images/avatars/Velazquez.jpg">
+            <img class="avatar" src="{{user.photoURL? user.photoURL: '/assets/dummy-user.png'}}">
         </div>
 
     </div>
