--- a/src/app/main/users/users.component.html
+++ b/src/app/main/users/users.component.html
@@ -17,41 +17,48 @@
 
 
 </div>
-
+    <div *ngIf="loader" class="my-spin-one">
+    <mat-spinner [diameter]="60" class="cus-spinner" color="accent"
+                 strokeWidth="5">
+    </mat-spinner>
+</div>
+    <div class="content p-24">
+        <div fxLayout="row" fxLayoutAlign="space-between center" >
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
         <!-- Position Column -->
-        <ng-container matColumnDef="position">
+        <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <ng-container matColumnDef="year">
+            <th mat-header-cell *matHeaderCellDef> year </th>
+            <td mat-cell *matCellDef="let element"> {{element.year}} </td>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> Weight </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        <ng-container matColumnDef="rating">
+            <th mat-header-cell *matHeaderCellDef> Rating </th>
+            <td mat-cell *matCellDef="let element"> {{element.rating}} </td>
         </ng-container>
 
         <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-            <th mat-header-cell *matHeaderCellDef> Symbol </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        <ng-container matColumnDef="runtime">
+            <th mat-header-cell *matHeaderCellDef> runtime </th>
+            <td mat-cell *matCellDef="let element"> {{element.runtime}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-
+        </div>
+    </div>
 
 
 </div>
