--- a/src/app/main/users/users.component.scss
+++ b/src/app/main/users/users.component.scss
@@ -1,3 +1,11 @@
 table {
     width: 100%;
 }
+.my-spin-one{
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    z-index: 2;
+}
