Router Loader April-2master

--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -1,5 +1,9 @@
 <mat-toolbar class="p-0 mat-elevation-z1">
     <div fxFlex fxFill fxLayout="row" fxLayoutAlign="start center">
+        <!-- PROGRESS BAR -->
+        <ng2-slim-loading-bar color="#094f84" [height]="'8px'"></ng2-slim-loading-bar>
+        <!-- / PROGRESS BAR -->
+
         <div fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
 
         </div>
