--- a/src/app/main/users/users.component.html
+++ b/src/app/main/users/users.component.html
@@ -1,61 +1,60 @@
-<div  class="page-layout simple fullwidth" fxLayout="column">
+<div class="page-layout simple fullwidth" fxLayout="column">
 
     <!-- HEADER -->
-
-<div class="header accent p-24 h-160" fxLayout="row" fxLayoutAlign="start center">
-    <div fxLayout="column" fxLayoutAlign="center start">
-        <div fxLayout="row" fxLayoutAlign="start center">
-            <mat-icon class="secondary-text s-18">home</mat-icon>
-            <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-            <span class="secondary-text">User Interface</span>
+    <div class="header accent p-24 h-160" fxLayout="row" fxLayoutAlign="start center">
+        <div fxLayout="column" fxLayoutAlign="center start">
+            <div fxLayout="row" fxLayoutAlign="start center">
+                <mat-icon class="secondary-text s-18">home</mat-icon>
+                <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
+                <span class="secondary-text">User Interface</span>
+            </div>
+            <div class="h1 mt-16">Users</div>
         </div>
-        <div class="h1 mt-16">Users</div>
-
-
     </div>
+    <!-- HEADER -->
 
-
-
-</div>
+    <!--Spinner -->
     <div *ngIf="loader" class="my-spin-one">
-    <mat-spinner [diameter]="60" class="cus-spinner" color="accent"
-                 strokeWidth="5">
-    </mat-spinner>
-</div>
+        <mat-spinner [diameter]="60" class="cus-spinner" color="accent" strokeWidth="5">
+        </mat-spinner>
+    </div>
+    <!---Spinner--->
+
+    <!---------------Content---------------------------->
     <div class="content p-24">
-        <div fxLayout="row" fxLayoutAlign="space-between center" >
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <div fxLayout="row" fxLayoutAlign="space-between center">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
+                <!--- Note that these columns can be defined in any order.
+                      The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-        </ng-container>
+                <!-- Position Column -->
+                <ng-container matColumnDef="title">
+                    <th mat-header-cell *matHeaderCellDef> No.</th>
+                    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+                </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="year">
-            <th mat-header-cell *matHeaderCellDef> year </th>
-            <td mat-cell *matCellDef="let element"> {{element.year}} </td>
-        </ng-container>
+                <!-- Name Column -->
+                <ng-container matColumnDef="year">
+                    <th mat-header-cell *matHeaderCellDef> year</th>
+                    <td mat-cell *matCellDef="let element"> {{element.year}} </td>
+                </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="rating">
-            <th mat-header-cell *matHeaderCellDef> Rating </th>
-            <td mat-cell *matCellDef="let element"> {{element.rating}} </td>
-        </ng-container>
+                <!-- Weight Column -->
+                <ng-container matColumnDef="rating">
+                    <th mat-header-cell *matHeaderCellDef> Rating</th>
+                    <td mat-cell *matCellDef="let element"> {{element.rating}} </td>
+                </ng-container>
 
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="runtime">
-            <th mat-header-cell *matHeaderCellDef> runtime </th>
-            <td mat-cell *matCellDef="let element"> {{element.runtime}} </td>
-        </ng-container>
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="runtime">
+                    <th mat-header-cell *matHeaderCellDef> runtime</th>
+                    <td mat-cell *matCellDef="let element"> {{element.runtime}} </td>
+                </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
 
         </div>
     </div>
