--- a/src/app/main/profile/tabs/photos-videos/photos-videos.component.html
+++ b/src/app/main/profile/tabs/photos-videos/photos-videos.component.html
@@ -1,5 +1,7 @@
-<div id="photos-videos" class="p-24">
-    <div class="period" *ngFor="let period of photosVideos">
+<p>hello</p>
+<!--
+  <div id="photos-videos" class="p-24">
+    <div class="period" >
 
         <div class="period-title">
             <span class="name">{{period.name}}</span>
@@ -14,3 +16,5 @@
         </div>
     </div>
 </div>
+
+  -->
