--- a/src/app/main/profile/tabs/timeline/timeline.component.scss
+++ b/src/app/main/profile/tabs/timeline/timeline.component.scss
@@ -280,6 +280,14 @@ profile-timeline {
     }
 }
 
-progress{
-    background-color: #2AA198;
+.example-margin {
+    border-radius: 14px !important;
+    alignment: center !important;
+    width: 220px !important;
+    height: 35px !important;
+    margin-right: 10px !important;
+
+
 }
+
+
