Build Service for -upload -save -get -delete #Status :- All Things Work Perfectly

--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -84,6 +84,8 @@ $typography: mat-typography-config(
 @import "src/app/main/register/register.theme";
 @import "src/app/main/forgot-password/forgot-password.theme";
 @import "src/app/main/mail-confirm/mail-confirm.theme";
+@import "src/app/main/profile/tabs/timeline/timeline.theme";
+@import "src/app/main/profile/tabs/photos-videos/photos-videos.theme";
 
 
 // Define a mixin for easier access
@@ -96,6 +98,8 @@ $typography: mat-typography-config(
     @include register-theme($theme);
     @include forgot-password-theme($theme);
     @include mail-confirm-theme($theme);
+    @include profile-timeline-theme($theme);
+    @include profile-photos-videos-theme($theme);
 }
 
 // -----------------------------------------------------------------------------------------------------
