--- a/src/app/main/profile/tabs/photos-videos/photos-videos.theme.scss
+++ b/src/app/main/profile/tabs/photos-videos/photos-videos.theme.scss
@@ -1,32 +1,57 @@
-@mixin profile-photos-videos-theme($theme) {
 
-    $background: map-get($theme, background);
-    $foreground: map-get($theme, foreground);
-
-    profile-photos-videos {
-
-        #photos-videos {
-
-            .period {
-
-                .period-title {
-
-                    .info {
-                        color: map-get($foreground, secondary-text);
-                    }
-                }
-
-                .period-media {
-
-                    .media {
-
-                        .title {
-                            background: rgba(0, 0, 0, 0.54);
-                            color: white;
-                        }
-                    }
-                }
-            }
-        }
-    }
+.masonry-demo {
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
 }
+
+.links {
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.links a {
+    flex-basis: 80%;
+    color: #009FB7;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.links a:hover {
+    color: #FE4A49;
+}
+
+.links iframe {
+    flex-basis: 50%;
+}
+
+ngx-masonry {
+    margin: 0 auto;
+}
+
+button {
+    cursor: pointer;
+    width: 40%;
+    height: 50px;
+    background: #f1f1f1;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 50px;
+}
+
+.masonry-item {
+    margin: 20px !important;
+    background-color: #f1f1f1;
+    background-size: cover;
+    width: 340px;
+}
+
+.masonry-item img {
+    width: 100%;
+    height: 100%;
+    min-height: 340px;
+}
+
